--- a/css/style-2.css
+++ b/css/style-2.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #aad8d3;
+    background-color: #eff;
     font-family: 'Noto Serif TC', serif;
 }
 
@@ -64,6 +64,7 @@ body{
 .pro-title{
     font-size: 2em;
     font-weight: 700;
+    margin-bottom: 5vw;
 }
 
 .project>.pro-img-1{
@@ -174,6 +175,27 @@ body{
     background-image: url(../images/js.png);
     background-size: 80%;
     background-position: center;
+    background-repeat: no-repeat;
+}
+.sk-img-4{
+    width: 120px;
+    height: 120px;
+    border-radius: 999em;
+    background-color: #ffffff;
+    background-image: url(../images/PS.png);
+    background-size: 65%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.sk-img-5{
+    width: 120px;
+    height: 120px;
+    border-radius: 999em;
+    background-color: #ffffff;
+    background-image: url(../images/XD.png);
+    background-size: 60%;
+    background-position-x: 50%;
+    background-position-y: 55%;
     background-repeat: no-repeat;
 }
 
